--- a/templates/duplicatevendoradd.html
+++ b/templates/duplicatevendoradd.html
@@ -236,7 +236,7 @@
 												<select maxlength="254" name="state"  id="state" style="height:35px;">
 													<option value="{{vendors_infos.state}}" selected >{{vendors_infos.state}}</option>
 														{% for all_state in all_states %}
-															<option value={{all_state.state}}>{{all_state.state}}</option>
+															<option value="{{all_state.state}}">{{all_state.state}}</option>
 														{% endfor %}
 												</select>
 												<div class="spce"><span id="invaild6" >This field is required</span></div>
