--- a/templates/editvendorinfo.html
+++ b/templates/editvendorinfo.html
@@ -260,7 +260,7 @@
 												<select maxlength="254" name="state" id="state" style="height:35px;" required>
 													<option value="{{vendors_info.state}}" selected>{{vendors_info.state}}</option>
 														{% for all_state in all_states %}
-															<option value={{all_state.state}}>{{all_state.state}}</option>
+															<option value="{{all_state.state}}">{{all_state.state}}</option>
 														{% endfor %}
 												</select>
 												<div class="spce"><span id="invaild6" >This field is required</span></div>
