--- a/templates/vendoradd5.html
+++ b/templates/vendoradd5.html
@@ -223,7 +223,7 @@
 												<select class="form-control" maxlength="254" name="state" id="state" style="height:35px;">
 													<option value="" disabled selected class="form-control">Select State</option>
 														{% for all_state in all_states %}
-														<option value={{all_state.state}}>{{all_state.state}}</option>
+														<option value="{{all_state.state}}">{{all_state.state}}</option>
 														{% endfor %}
 												</select>
 												<div class="spce"><span id="invaild6" >This field is required</span></div>
